# modu-kit

common/include/: common.hpp
common/src/: common.cpp
module/audex/: CMakeLists.txt
module/audex/include/: audex.hpp
module/audex/src/: audex.cpp  main.cpp
module/chat_desktop/: CMakeLists.txt
module/chat_desktop/include/: chat_window.hpp  custom_widget.hpp  home_page.hpp  login_window.hpp
module/chat_desktop/src/: chat_window.cpp  custom_widget.cpp  home_page.cpp  homepage.cpp  login_window.cpp  main.cpp
module/monitor_file/include/: file_watcher.hpp
module/monitor_file/src/: file_watcher.cpp
